gstreamer: adjust set of plug-ins for gstreamer-1.0
Added wavpack to gst-plugins-good and opus to gst-plugins-bad
Added videoconvert to gst-plugins-base and gdkpixbuf to gst-plugins-good.
Deleted plugins which will not be ported to gstreamer-1.0.
Added FAAD

Signed-off-by: Bogdan Radulescu <bogdan@nimblex.net>

--- a/package/multimedia/gst-plugins-base/Config.in
+++ b/package/multimedia/gst-plugins-base/Config.in
@@ -36,13 +36,6 @@ config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC
 config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ENCODING
 	bool "encoding"
 
-config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_FFMPEGCOLORSPACE
-	bool "ffmpegcolorspace (mandatory for video playback)"
-	default y
-
-config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_GDP
-	bool "gdp"
-
 config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK
 	bool "playback (mandatory)"
 	default y
@@ -56,6 +49,9 @@ config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TCP
 config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TYPEFIND
 	bool "typefind (mandatory)"
 	default y
+
+config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEOCONVERT
+	bool "videoconvert"
 
 config BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEOTESTSRC
 	bool "videotestsrc"
