--- a/package/multimedia/gst-plugins-bad/Config.in
+++ b/package/multimedia/gst-plugins-bad/Config.in
@@ -33,9 +33,6 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_AUDIOVISUALIZERS
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_BAYER
 	bool "bayer"
 
-config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CAMERABIN
-	bool "camerabin"
-
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CAMERABIN2
 	bool "camerabin2"
 
@@ -81,9 +78,6 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FESTIVAL
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FIELDANALYSIS
 	bool "fieldanalysis"
-
-config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FREEZE
-	bool "freeze"
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FREEVERB
 	bool "freeverb"
@@ -208,11 +202,11 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SIREN
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SMOOTH
 	bool "smooth"
 
-config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SPEED
-	bool "speed"
-
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SUBENC
 	bool "subenc"
+
+config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SPEED
+	bool "speed"
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_STEREO
 	bool "stereo"
@@ -241,7 +235,7 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VMNC
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_Y4M
 	bool "y4m"
 
-comment "plugins with external dependencies (there may be more available)"
+comment "plugins with external dependencies (not all from gstreamer are here)"
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_APEXSINK
 	bool "apexsink"
@@ -267,12 +261,20 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DIRECTFB
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DVB
 	bool "dvb"
 
+config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FAAD
+	bool "faad"
+	select BR2_PACKAGE_FAAD2
+
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FBDEV
 	bool "fbdev"
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIBMMS
 	bool "libmms"
 	select BR2_PACKAGE_LIBMMS
+
+config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPG123
+	bool "mpg123"
+	select BR2_PACKAGE_MMPG123
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MUSEPACK
 	bool "musepack"
