--- a/package/multimedia/gst-plugins-good/Config.in
+++ b/package/multimedia/gst-plugins-good/Config.in
@@ -79,6 +79,10 @@ config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLV
 config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLX
 	bool "flx"
 
+config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_GDKPIXBUF
+       bool "gdkpixbuf"
+       select BR2_PACKAGE_GDK_PIXBUF
+
 config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_GOOM
 	bool "goom"
 
@@ -203,5 +207,9 @@ config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC
 config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SPEEX
 	bool "speex"
 	select BR2_PACKAGE_SPEEX
+
+config BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_WAVPACK
+	bool "wavpack (*.wv audio)"
+	select BR2_PACKAGE_WAVPACK
 
 endif
