--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-02436-g3ffc092-dirty Configuration
+# Buildroot 2012.11-00012-gccb9b5a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -202,12 +202,15 @@ BR2_PTHREADS_NATIVE=y
 BR2_TARGET_GENERIC_HOSTNAME="raumfeld"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Raumfeld"
 # BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
-# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS is not set
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
+# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV is not set
 BR2_INIT_BUSYBOX=y
 # BR2_INIT_SYSV is not set
-# BR2_INIT_SYSTEMD is not set
+
+#
+# systemd requires largefile, wchar, IPv6, threads and udev support
+#
 # BR2_INIT_NONE is not set
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
@@ -518,17 +521,12 @@ BR2_PACKAGE_MTD_NANDWRITE=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 # BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE is not set
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
-BR2_PACKAGE_UDEV=y
-# BR2_PACKAGE_UDEV_ACL is not set
-# BR2_PACKAGE_UDEV_GUDEV is not set
-# BR2_PACKAGE_UDEV_HWDATA is not set
-# BR2_PACKAGE_UDEV_INTROSPECTION is not set
-# BR2_PACKAGE_UDEV_KEYMAP is not set
-# BR2_PACKAGE_UDEV_MTD is not set
-# BR2_PACKAGE_UDEV_RULES_GEN is not set
+
+#
+# udev requires /dev mgmnt set to udev under System configuration
+#
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
-# BR2_PACKAGE_USBMOUNT is not set
 # BR2_PACKAGE_USBUTILS is not set
 # BR2_PACKAGE_WIPE is not set
 
@@ -949,7 +947,6 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
 # BR2_PACKAGE_NETSTAT_NAT is not set
-# BR2_PACKAGE_NETWORK_MANAGER is not set
 # BR2_PACKAGE_NFACCT is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NGIRCD is not set
@@ -1067,7 +1064,10 @@ BR2_PACKAGE_ZLIB=y
 #
 # supervisor needs the python interpreter
 #
-# BR2_PACKAGE_SYSTEMD is not set
+
+#
+# systemd not available (depends on /dev management with udev and ipv6 support, and thread support in toolchain)
+#
 BR2_PACKAGE_UTIL_LINUX=y
 # BR2_PACKAGE_UTIL_LINUX_BASIC is not set
 # BR2_PACKAGE_UTIL_LINUX_MOUNT is not set
