raumfeld: update configurations after gstreamer update

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-02438-ge3d66d5-dirty Configuration
+# Buildroot 2012.11-00020-g27f9b01-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -267,9 +267,7 @@ BR2_PACKAGE_FLAC=y
 # BR2_PACKAGE_FFMPEG is not set
 BR2_PACKAGE_GSTREAMER=y
 # BR2_PACKAGE_GSTREAMER_GST_DEBUG is not set
-BR2_PACKAGE_GST_FFMPEG=y
-# BR2_PACKAGE_GST_DSP is not set
-# BR2_PACKAGE_GST_OMAPFB is not set
+BR2_PACKAGE_GST_LIBAV=y
 BR2_PACKAGE_GST_PLUGINS_BASE=y
 
 #
@@ -282,12 +280,11 @@ BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOCONVERT=y
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ENCODING is not set
-# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_FFMPEGCOLORSPACE is not set
-# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_GDP is not set
 BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK=y
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_SUBPARSE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TCP is not set
 BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TYPEFIND=y
+# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEOCONVERT is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEOTESTSRC is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEORATE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_VIDEOSCALE is not set
@@ -323,6 +320,7 @@ BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_EQUALIZER is not set
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLV is not set
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLX is not set
+# BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_GDKPIXBUF is not set
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_GOOM is not set
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_GOOM2K1 is not set
 BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_ID3DEMUX=y
@@ -364,6 +362,7 @@ BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLAC=y
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_PULSE is not set
 BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SPEEX is not set
+# BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_WAVPACK is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD is not set
 BR2_PACKAGE_GST_PLUGINS_UGLY=y
 
@@ -383,7 +382,7 @@ BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MPEGAUDIOPARSE=y
 # plugins with external dependencies (there may be more available)
 #
 # BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_LAME is not set
-BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MAD=y
+# BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MAD is not set
 # BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MPEG2DEC is not set
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_MADPLAY is not set
@@ -724,13 +723,7 @@ BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS=y
 # BR2_PACKAGE_LIBCUEFILE is not set
 BR2_PACKAGE_LIBID3TAG=y
 # BR2_PACKAGE_LIBLO is not set
-BR2_PACKAGE_LIBMAD=y
-BR2_PACKAGE_LIBMAD_OPTIMIZATION_DEFAULT=y
-# BR2_PACKAGE_LIBMAD_OPTIMIZATION_SPEED is not set
-# BR2_PACKAGE_LIBMAD_OPTIMIZATION_ACCURACY is not set
-# BR2_PACKAGE_LIBMAD_SSO is not set
-BR2_PACKAGE_LIBMAD_ASO=y
-# BR2_PACKAGE_LIBMAD_STRICT_ISO is not set
+# BR2_PACKAGE_LIBMAD is not set
 # BR2_PACKAGE_LIBMPD is not set
 # BR2_PACKAGE_LIBREPLAYGAIN is not set
 # BR2_PACKAGE_LIBSAMPLERATE is not set
