raumfeld: unselect orc as it isn't used at all

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -930,7 +930,7 @@ BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_LINUX_PAM is not set
 # BR2_PACKAGE_LTTNG_LIBUST is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
-BR2_PACKAGE_ORC=y
+# BR2_PACKAGE_ORC is not set
 # BR2_PACKAGE_POCO is not set
 # BR2_PACKAGE_PROTOBUF is not set
 # BR2_PACKAGE_SCHIFRA is not set
