--- a/package/multimedia/gst-plugins-bad/Config.in
+++ b/package/multimedia/gst-plugins-bad/Config.in
@@ -274,7 +274,7 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIBMMS
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPG123
 	bool "mpg123"
-	select BR2_PACKAGE_MMPG123
+	select BR2_PACKAGE_MPG123
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MUSEPACK
 	bool "musepack"
