raumfeld: enable mpg123 plug-in from gst-plugins-bad

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-00020-g27f9b01-dirty Configuration
+# Buildroot 2012.11-01741-gdebaa30 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -363,7 +363,104 @@ BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_FLAC=y
 BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_SPEEX is not set
 # BR2_PACKAGE_GST_PLUGINS_GOOD_PLUGIN_WAVPACK is not set
-# BR2_PACKAGE_GST_PLUGINS_BAD is not set
+BR2_PACKAGE_GST_PLUGINS_BAD=y
+
+#
+# dependency-less plugins
+#
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_ADPCMDEC is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_ADPCMENC is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_AIFF is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_ASFMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_AUTOCONVERT is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_AUDIOVISUALIZERS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_BAYER is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CAMERABIN2 is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CDXAPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_COLOREFFECTS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_COLORSPACE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DATAURISRC is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DCCP is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DEBUGUTILS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DECKLINK is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DTMF is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DVBSUBOVERLAY is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DVDSPU is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FACEOVERLAY is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FESTIVAL is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FIELDANALYSIS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FREEVERB is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FREI0R is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GAUDIEFFECTS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GEOMETRICTRANSFORM is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GSETTINGS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_H264PARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_HDVPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_HLS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_ID3TAG is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_INTER is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_INTERLACE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_IVFPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_JP2KDECIMATOR is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_JPEGFORMAT is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LEGACYRESAMPLE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIBRFB is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LINSYS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIVEADDER is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPEGDEMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPEGPSMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPEGTSMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPEGVIDEOPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MVE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MXF is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_NSF is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_NUVDEMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_PATCHDETECT is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_PCAPPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_PNM is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_RAWPARSE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_REAL is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_REMOVESILENCE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_RTPMUX is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_RTPVP8 is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SCALETEMPO is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDI is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDP is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SEGMENTCLIP is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SIREN is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SMOOTH is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SUBENC is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SPEED is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_STEREO is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_TTA is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VIDEOFILTERS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VIDEOMAXRATE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VIDEOMEASURE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VIDEOPARSERS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VIDEOSIGNAL is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VMNC is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_Y4M is not set
+
+#
+# plugins with external dependencies (not all from gstreamer are here)
+#
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_APEXSINK is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_BZ2 is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CDAUDIO is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_CURL is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DIRECTFB is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_DVB is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FAAD is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FBDEV is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIBMMS is not set
+BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPG123=y
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MUSEPACK is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_NEON is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_OPUS is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDL is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SNDFILE is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_VCD is not set
 BR2_PACKAGE_GST_PLUGINS_UGLY=y
 
 #
@@ -387,7 +484,7 @@ BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MPEGAUDIOPARSE=y
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_MADPLAY is not set
 # BR2_PACKAGE_MPD is not set
-# BR2_PACKAGE_MPG123 is not set
+BR2_PACKAGE_MPG123=y
 # BR2_PACKAGE_MPLAYER is not set
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
