raumfeld: unselect alsa, audioconvert and playback plug-ins

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-00026-g4f8f0a3-dirty Configuration
+# Buildroot 2012.11-00028-g8f2fc58-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -275,12 +275,12 @@ BR2_PACKAGE_GST_PLUGINS_BASE=y
 #
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ADDER is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_APP is not set
-BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOCONVERT=y
+# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOCONVERT is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIORATE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ENCODING is not set
-BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK=y
+# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_SUBPARSE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TCP is not set
 BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TYPEFIND=y
@@ -293,6 +293,7 @@ BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TYPEFIND=y
 #
 # plugins with external dependencies (there may be more available)
 #
+# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ALSA is not set
 BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_OGG=y
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PANGO is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_THEORA is not set
