gst-plugins: Bumped the version and changed some configs for gst-plugins
Added options to select two plugins from gst-plugins-bad.

Removed some obsolete options for when compiling gst-libav.
Unfortunatelly the swscale feature can't be disabled because is needed
by avcodec which in turn is needed to compile gst-libav.

--- a/package/multimedia/gst-plugins-bad/Config.in
+++ b/package/multimedia/gst-plugins-bad/Config.in
@@ -91,6 +91,9 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GAUDIEFFECTS
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GEOMETRICTRANSFORM
 	bool "geometrictransform"
 
+config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GDP
+	bool "gdp"
+
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GSETTINGS
 	bool "gsettings"
 
@@ -195,6 +198,9 @@ config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDP
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SEGMENTCLIP
 	bool "segmentclip"
+
+config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SHM
+	bool "shm"
 
 config BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SIREN
 	bool "siren"
