raumfeld: update configurations after gstreamer changes

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-01741-gdebaa30 Configuration
+# Buildroot 2012.11-00032-gbec956e-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -394,6 +394,7 @@ BR2_PACKAGE_GST_PLUGINS_BAD=y
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FREI0R is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GAUDIEFFECTS is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GEOMETRICTRANSFORM is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GDP is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_GSETTINGS is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_H264PARSE is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_HDVPARSE is not set
@@ -429,6 +430,7 @@ BR2_PACKAGE_GST_PLUGINS_BAD=y
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDI is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SDP is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SEGMENTCLIP is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SHM is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SIREN is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SMOOTH is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_SUBENC is not set
