raumfeld: we need the playback plug-in

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -280,7 +280,7 @@ BR2_PACKAGE_GST_PLUGINS_BASE=y
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_ENCODING is not set
-# BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK is not set
+BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_PLAYBACK=y
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_SUBPARSE is not set
 # BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TCP is not set
 BR2_PACKAGE_GST_PLUGINS_BASE_PLUGIN_TYPEFIND=y
