raumfeld: enable gdb and gdbserver for the Base

--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-01722-g760dc71-dirty Configuration
+# Buildroot 2012.11-01755-ge65e0dd Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arm is not set
@@ -132,7 +132,7 @@ BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
 BR2_UCLIBC_VERSION_STRING="0.9.32.1"
 BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
-# BR2_PTHREAD_DEBUG is not set
+BR2_PTHREAD_DEBUG=y
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 
 #
@@ -167,9 +167,13 @@ BR2_GCC_ENABLE_TLS=y
 #
 # Gdb Options
 #
-# BR2_PACKAGE_GDB is not set
-# BR2_PACKAGE_GDB_SERVER is not set
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
 # BR2_PACKAGE_GDB_HOST is not set
+# BR2_GDB_VERSION_7_2 is not set
+# BR2_GDB_VERSION_7_3 is not set
+BR2_GDB_VERSION_7_4=y
+BR2_GDB_VERSION="7.4.1"
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
@@ -741,7 +745,10 @@ BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_ENCHANT is not set
 # BR2_PACKAGE_ICU is not set
 # BR2_PACKAGE_LIBICONV is not set
-# BR2_PACKAGE_NCURSES is not set
+BR2_PACKAGE_NCURSES=y
+# BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
+# BR2_PACKAGE_NCURSES_TARGET_FORM is not set
+# BR2_PACKAGE_NCURSES_TARGET_MENU is not set
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
 BR2_PACKAGE_POPT=y
