--- a/package/multimedia/gst-plugins-ugly/Config.in
+++ b/package/multimedia/gst-plugins-ugly/Config.in
@@ -36,6 +36,9 @@ config BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_REALMEDIA
 config BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_SYNAESTHESIA
 	bool "synaesthesia"
 
+config BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_XINGMUX
+	bool "xingmux"
+
 comment "plugins with external dependencies (there may be more available)"
 
 config BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_LAME
