raumfeld: update configurations for gst-plugins-ugly

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-00032-gbec956e-dirty Configuration
+# Buildroot 2012.11-00045-gea77955-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -477,6 +477,7 @@ BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MPEGAUDIOPARSE=y
 # BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_MPEGSTREAM is not set
 # BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_REALMEDIA is not set
 # BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_SYNAESTHESIA is not set
+# BR2_PACKAGE_GST_PLUGINS_UGLY_PLUGIN_XINGMUX is not set
 
 #
 # plugins with external dependencies (there may be more available)
