--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -913,7 +913,7 @@ BR2_PACKAGE_SAMBA_SMBD=y
 # BR2_PACKAGE_SAMBA_SMBSTATUS is not set
 # BR2_PACKAGE_SAMBA_SMBTREE is not set
 # BR2_PACKAGE_SAMBA_SWAT is not set
-BR2_PACKAGE_SAMBA_SMBTA_UTIL=y
+# BR2_PACKAGE_SAMBA_SMBTA_UTIL is not set
 
 #
 # smbtar        - disabled (requires smbclient)
