raumfeld: fix typo in config

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1207,7 +1207,7 @@ BR2_PACKAGE_SAMBA=y
 # BR2_PACKAGE_SAMBA_SMBSTATUS is not set
 # BR2_PACKAGE_SAMBA_SMBTREE is not set
 # BR2_PACKAGE_SAMBA_SWAT is not set
-# BR2_PACKAGE_SAMBA_SMBTA_UTIL it not set
+# BR2_PACKAGE_SAMBA_SMBTA_UTIL is not set
 
 #
 # smbtar        - disabled (requires smbclient)
