raumfeld: use UTF-8 encoding for NTFS partitions

--- a/raumfeld/rootfs/etc/usbmount/usbmount.conf
+++ b/raumfeld/rootfs/etc/usbmount/usbmount.conf
@@ -1,5 +1,5 @@
 ENABLED=1
 FILESYSTEMS="ext2 ext3 ext4 msdos vfat ntfs fuseblk hfs hfsplus"
 MOUNTOPTIONS="ro,noexec,nodev,noatime,nodiratime"
-FS_MOUNTOPTIONS="-fstype=vfat,utf8=true,uid=99,gid=99"
+FS_MOUNTOPTIONS="-fstype=vfat,utf8=true,uid=99,gid=99 -fstype=ntfs,nls=utf8"
 VERBOSE=y
