raumfeld: change NetBIOS host name to "RAUMFELD-BASE"
Mac OS X 10.8 and Windows 8 both have become picky about the
allowed characters in NetBIOS host names (bug #3074).

Also clean up and unify the smb.conf file the ARM platforms.

--- a/raumfeld/rootfs-geode/etc/samba/smb.conf
+++ b/raumfeld/rootfs-geode/etc/samba/smb.conf
@@ -13,7 +13,7 @@ socket options = TCP_NODELAY SO_RCVBUF=16384 SO_SNDBUF=16384
 max protocol = SMB2
 load printers = no
 printcap name = /dev/null
-netbios name = Raumfeld Base
+netbios name = RAUMFELD-BASE
 
 #============================ Share Definitions ==============================
 idmap uid = 16777216-33554431
