--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -418,7 +418,9 @@ BR2_PACKAGE_E2FSPROGS_UUIDGEN=y
 # BR2_PACKAGE_MAKEDEVS is not set
 # BR2_PACKAGE_MTD is not set
 # BR2_PACKAGE_NFS_UTILS is not set
-# BR2_PACKAGE_NTFS_3G is not set
+BR2_PACKAGE_NTFS_3G=y
+# BR2_PACKAGE_NTFS_3G_ENCRYPTED is not set
+# BR2_PACKAGE_NTFS_3G_NTFSPROGS is not set
 # BR2_PACKAGE_SQUASHFS is not set
 # BR2_PACKAGE_SSHFS is not set
 # BR2_PACKAGE_UNIONFS is not set
