--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -765,9 +765,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_MRVL_SD8787=y
 # BR2_PACKAGE_STATSERIAL is not set
 # BR2_PACKAGE_SYSSTAT is not set
 # BR2_PACKAGE_TI_UTILS is not set
-BR2_PACKAGE_UBOOT_TOOLS=y
-# BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE is not set
-BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
+# BR2_PACKAGE_UBOOT_TOOLS is not set
 BR2_PACKAGE_UDEV=y
 # BR2_PACKAGE_UDEV_ACL is not set
 # BR2_PACKAGE_UDEV_GUDEV is not set
