--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -874,7 +874,7 @@ BR2_PACKAGE_LIBGLIB2=y
 #
 # BR2_PACKAGE_LTTNG_LIBUST is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
-BR2_PACKAGE_ORC=y
+# BR2_PACKAGE_ORC is not set
 
 #
 # poco requires a toolchain with WCHAR and C++ support
