linux: allow to specify the kernel load address

--- a/linux/Config.in
+++ b/linux/Config.in
@@ -286,6 +286,11 @@ config BR2_LINUX_KERNEL_CUSTOM_DTS_PATH
 
 endif
 
+config BR2_LINUX_KERNEL_LOADADDR
+       string "Kernel load address"
+       help
+         Set the load address
+
 config BR2_LINUX_KERNEL_INSTALL_TARGET
 	bool "Install kernel image to /boot in target"
 	depends on !BR2_TARGET_ROOTFS_INITRAMFS
