--- a/raumfeld/br2-initramfs-arm.config
+++ b/raumfeld/br2-initramfs-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2012.11-00012-gccb9b5a Configuration
+# Buildroot 2013.02-02525-g5cfcef8-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -35,17 +35,20 @@ BR2_GCC_TARGET_ABI="aapcs-linux"
 # BR2_arm922t is not set
 # BR2_arm926t is not set
 # BR2_arm10t is not set
-# BR2_arm1136jf_s is not set
+# BR2_arm1136jf_s_r0 is not set
+# BR2_arm1136jf_s_r1 is not set
 # BR2_arm1176jz_s is not set
 # BR2_arm1176jzf_s is not set
+# BR2_cortex_a5 is not set
 # BR2_cortex_a8 is not set
 # BR2_cortex_a9 is not set
+# BR2_cortex_a15 is not set
 # BR2_sa110 is not set
 # BR2_sa1100 is not set
 BR2_xscale=y
 # BR2_iwmmxt is not set
+# BR2_arm1136jf_s is not set
 BR2_ARM_EABI=y
-# BR2_ARM_OABI is not set
 
 #
 # Build options
@@ -66,6 +69,7 @@ BR2_ZCAT="gzip -d -c"
 BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_TAR_OPTIONS=""
+BR2_DEFCONFIG="$(CONFIG_DIR)/defconfig"
 BR2_DL_DIR="$(BASE_DIR)/dl"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
@@ -106,12 +110,10 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # Kernel Header Options
 #
 # BR2_KERNEL_HEADERS_3_0 is not set
-# BR2_KERNEL_HEADERS_3_1 is not set
 # BR2_KERNEL_HEADERS_3_2 is not set
-# BR2_KERNEL_HEADERS_3_3 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
-# BR2_KERNEL_HEADERS_3_5 is not set
 # BR2_KERNEL_HEADERS_3_6 is not set
+# BR2_KERNEL_HEADERS_3_7 is not set
 BR2_KERNEL_HEADERS_VERSION=y
 # BR2_KERNEL_HEADERS_SNAP is not set
 BR2_DEFAULT_KERNEL_VERSION="3.0.4"
@@ -120,7 +122,6 @@ BR2_DEFAULT_KERNEL_HEADERS="3.0.4"
 #
 # uClibc Options
 #
-# BR2_UCLIBC_VERSION_0_9_31 is not set
 BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_0_9_33 is not set
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
@@ -179,6 +180,7 @@ BR2_PREFER_SOFT_FLOAT=y
 BR2_SOFT_FLOAT=y
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_TARGET_LDFLAGS=""
+# BR2_ECLIPSE_REGISTER is not set
 
 #
 # Toolchain Options
@@ -201,6 +203,11 @@ BR2_PTHREADS_NATIVE=y
 #
 BR2_TARGET_GENERIC_HOSTNAME="raumfeld"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Raumfeld"
+# BR2_TARGET_GENERIC_PASSWD_DES is not set
+BR2_TARGET_GENERIC_PASSWD_MD5=y
+# BR2_TARGET_GENERIC_PASSWD_SHA256 is not set
+# BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
+BR2_TARGET_GENERIC_PASSWD_METHOD="md5"
 # BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
@@ -215,6 +222,7 @@ BR2_INIT_BUSYBOX=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
+BR2_TARGET_GENERIC_ROOT_PASSWD=""
 BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 # BR2_TARGET_GENERIC_GETTY_BAUDRATE_KEEP is not set
 # BR2_TARGET_GENERIC_GETTY_BAUDRATE_9600 is not set
@@ -223,8 +231,11 @@ BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 # BR2_TARGET_GENERIC_GETTY_BAUDRATE_57600 is not set
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
 BR2_TARGET_GENERIC_GETTY_BAUDRATE="115200"
+BR2_TARGET_GENERIC_GETTY_TERM="vt100"
 BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW=y
+BR2_ROOTFS_OVERLAY=""
 BR2_ROOTFS_POST_BUILD_SCRIPT="raumfeld/postbuild-initramfs-arm.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT=""
 
 #
 # Package Selection for the target
@@ -232,6 +243,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="raumfeld/postbuild-initramfs-arm.sh"
 BR2_PACKAGE_BUSYBOX=y
 BR2_BUSYBOX_VERSION_1_19_X=y
 # BR2_BUSYBOX_VERSION_1_20_X is not set
+# BR2_BUSYBOX_VERSION_1_21_X is not set
 # BR2_PACKAGE_BUSYBOX_SNAPSHOT is not set
 BR2_BUSYBOX_VERSION="1.19.4"
 BR2_PACKAGE_BUSYBOX_CONFIG="raumfeld/busybox.config"
@@ -264,12 +276,14 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_PULSEAUDIO is not set
 # BR2_PACKAGE_VORBIS_TOOLS is not set
 # BR2_PACKAGE_WAVPACK is not set
+# BR2_PACKAGE_YAVTA is not set
 
 #
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BZIP2 is not set
 # BR2_PACKAGE_GZIP is not set
+# BR2_PACKAGE_INFOZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_XZ is not set
 
@@ -280,6 +294,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # bonnie++ requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_CACHE_CALIBRATOR is not set
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DMALLOC is not set
@@ -296,6 +311,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # oprofile requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_PERF is not set
 # BR2_PACKAGE_RAMSPEED is not set
 # BR2_PACKAGE_RT_TESTS is not set
 # BR2_PACKAGE_STRACE is not set
@@ -309,7 +325,6 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BINUTILS is not set
 # BR2_PACKAGE_BISON is not set
 # BR2_PACKAGE_BSDIFF is not set
-# BR2_PACKAGE_CCACHE is not set
 # BR2_PACKAGE_COREUTILS is not set
 # BR2_PACKAGE_CVS is not set
 # BR2_PACKAGE_DIFFUTILS is not set
@@ -352,6 +367,10 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 
 #
 # graphic libraries
+#
+
+#
+# cegui06 needs a toolchain with C++ and threads
 #
 # BR2_PACKAGE_DIRECTFB is not set
 # BR2_PACKAGE_FBDUMP is not set
@@ -400,8 +419,10 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_CIFS_UTILS is not set
 # BR2_PACKAGE_CRAMFS is not set
+# BR2_PACKAGE_CURLFTPFS is not set
 # BR2_PACKAGE_DOSFSTOOLS is not set
 # BR2_PACKAGE_E2FSPROGS is not set
+# BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENROMFS is not set
 # BR2_PACKAGE_MAKEDEVS is not set
@@ -416,10 +437,22 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # Hardware handling
 #
+
+#
+# Misc devices firmwares
+#
+# BR2_PACKAGE_B43_FIRMWARE is not set
+# BR2_PACKAGE_FIRMWARE_IMX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE is not set
+# BR2_PACKAGE_RPI_FIRMWARE is not set
+# BR2_PACKAGE_UX500_FIRMWARE is not set
+# BR2_PACKAGE_ZD1211_FIRMWARE is not set
 # BR2_PACKAGE_CDRKIT is not set
 # BR2_PACKAGE_DBUS is not set
 # BR2_PACKAGE_DEVMEM2 is not set
 # BR2_PACKAGE_DMRAID is not set
+# BR2_PACKAGE_DVB_APPS is not set
+# BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EEPROG is not set
 # BR2_PACKAGE_EVTEST is not set
 # BR2_PACKAGE_FCONFIG is not set
@@ -442,7 +475,6 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_IRDA_UTILS is not set
 # BR2_PACKAGE_KBD is not set
 # BR2_PACKAGE_LCDPROC is not set
-# BR2_PACKAGE_LINUX_FIRMWARE is not set
 # BR2_PACKAGE_LM_SENSORS is not set
 
 #
@@ -451,9 +483,11 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
 # BR2_PACKAGE_MDADM is not set
+# BR2_PACKAGE_MEDIA_CTL is not set
 # BR2_PACKAGE_MEMTESTER is not set
 # BR2_PACKAGE_MINICOM is not set
 # BR2_PACKAGE_NANOCOM is not set
+# BR2_PACKAGE_NEARD is not set
 # BR2_PACKAGE_OFONO is not set
 # BR2_PACKAGE_OPEN2300 is not set
 # BR2_PACKAGE_OPENOCD is not set
@@ -465,14 +499,20 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_PCIUTILS is not set
 # BR2_PACKAGE_PICOCOM is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
+
+#
+# rpi-userland requires a toolchain with C++ and LARGEFILE support
+#
 # BR2_PACKAGE_SANE_BACKENDS is not set
 # BR2_PACKAGE_SDPARM is not set
 # BR2_PACKAGE_SETSERIAL is not set
 # BR2_PACKAGE_SFDISK is not set
+# BR2_PACKAGE_SG3_UTILS is not set
 
 #
 # smartmontools requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_SNOWBALL_HDMISERVICE is not set
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
 # BR2_PACKAGE_SYSSTAT is not set
@@ -484,6 +524,10 @@ BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 #
 # udev requires /dev mgmnt set to udev under System configuration
 #
+
+#
+# udisks requires /dev mgmnt set to udev under System configuration
+#
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
 # BR2_PACKAGE_USBUTILS is not set
@@ -494,6 +538,7 @@ BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 #
 # BR2_PACKAGE_ERLANG is not set
 # BR2_PACKAGE_HASERL is not set
+# BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
 # BR2_PACKAGE_PERL is not set
@@ -515,6 +560,7 @@ BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 #
 # audiofile requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_CELT051 is not set
 # BR2_PACKAGE_LIBAO is not set
 # BR2_PACKAGE_LIBCDAUDIO is not set
 # BR2_PACKAGE_LIBCUE is not set
@@ -556,10 +602,13 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
 # BR2_PACKAGE_LIBGPG_ERROR is not set
+# BR2_PACKAGE_LIBMCRYPT is not set
+# BR2_PACKAGE_LIBMHASH is not set
 # BR2_PACKAGE_LIBNSS is not set
+# BR2_PACKAGE_LIBSHA1 is not set
+# BR2_PACKAGE_NETTLE is not set
 # BR2_PACKAGE_OCF_LINUX is not set
 # BR2_PACKAGE_OPENSSL is not set
-# BR2_PACKAGE_NETTLE is not set
 # BR2_PACKAGE_POLARSSL is not set
 
 #
@@ -591,6 +640,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_CAIRO is not set
 # BR2_PACKAGE_FONTCONFIG is not set
 # BR2_PACKAGE_FREETYPE is not set
+# BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_IMLIB2 is not set
 # BR2_PACKAGE_JPEG is not set
 # BR2_PACKAGE_LIBART is not set
@@ -606,6 +656,10 @@ BR2_PACKAGE_ZLIB=y
 
 #
 # libraw requires a toolchain with C++ support enabled
+#
+
+#
+# librsvg requires a toolchain with WCHAR and C++ support
 #
 # BR2_PACKAGE_LIBSVGTINY is not set
 # BR2_PACKAGE_LIBUNGIF is not set
@@ -632,11 +686,16 @@ BR2_PACKAGE_ZLIB=y
 # Hardware handling
 #
 # BR2_PACKAGE_CCID is not set
+# BR2_PACKAGE_IMX_LIB is not set
 
 #
 # lcdapi requires a toolchain with C++ and thread support enabled
 #
 # BR2_PACKAGE_LIBAIO is not set
+
+#
+# libatasmart requires udev to be enabled
+#
 # BR2_PACKAGE_LIBRAW1394 is not set
 # BR2_PACKAGE_TSLIB is not set
 # BR2_PACKAGE_LIBFREEFARE is not set
@@ -648,6 +707,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBUSB is not set
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_MTDEV is not set
+# BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
 
 #
@@ -665,6 +725,17 @@ BR2_PACKAGE_ZLIB=y
 #
 # BR2_PACKAGE_LIBDVDREAD is not set
 # BR2_PACKAGE_LIBDVDNAV is not set
+
+#
+# libebml requires a toolchain with C++ support
+#
+# BR2_PACKAGE_LIBFSLCODEC is not set
+# BR2_PACKAGE_LIBFSLPARSER is not set
+# BR2_PACKAGE_LIBFSLVPUWRAP is not set
+
+#
+# libmatroska requires a toolchain with C++ support
+#
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
 # BR2_PACKAGE_LIBOGG is not set
@@ -676,7 +747,7 @@ BR2_PACKAGE_ZLIB=y
 #
 
 #
-# mediastreamer requires a toolchain with C++ support enabled
+# mediastreamer requires a toolchain with threads and C++ support
 #
 
 #
@@ -693,7 +764,9 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBESMTP is not set
 # BR2_PACKAGE_LIBEXOSIP2 is not set
 # BR2_PACKAGE_LIBFCGI is not set
+# BR2_PACKAGE_LIBGSASL is not set
 # BR2_PACKAGE_LIBIDN is not set
+# BR2_PACKAGE_LIBISCSI is not set
 # BR2_PACKAGE_LIBOAUTH is not set
 # BR2_PACKAGE_LIBMICROHTTPD is not set
 # BR2_PACKAGE_NEON is not set
@@ -716,11 +789,13 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBTIRPC is not set
 
 #
-# libtorrent requires a toolchain with C++ support enabled
+# libtorrent requires a toolchain with C++ and threads support enabled
 #
 # BR2_PACKAGE_LIBUPNP is not set
 # BR2_PACKAGE_LIBVNCSERVER is not set
 # BR2_PACKAGE_ORTP is not set
+# BR2_PACKAGE_SLIRP is not set
+# BR2_PACKAGE_USBREDIR is not set
 
 #
 # zeromq requires a toolchain with C++, LARGEFILE + WCHAR support
@@ -731,12 +806,14 @@ BR2_PACKAGE_ZLIB=y
 #
 # BR2_PACKAGE_APR is not set
 # BR2_PACKAGE_APR_UTIL is not set
+# BR2_PACKAGE_LIBCOFI is not set
+# BR2_PACKAGE_ELFUTILS is not set
 # BR2_PACKAGE_FFTW is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 
 #
-# boost requires a toolchain with C++ support enabled
+# boost requires a toolchain with C++, large file and thread support enabled
 #
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
 # BR2_PACKAGE_LIBCAP is not set
@@ -785,11 +862,13 @@ BR2_PACKAGE_ZLIB=y
 #
 # enchant requires a toolchain with C++ and WCHAR support enabled
 #
+# BR2_PACKAGE_LIBFRIBIDI is not set
 
 #
 # icu requires a toolchain with C++ support and WCHAR enabled
 #
 # BR2_PACKAGE_LIBICONV is not set
+# BR2_PACKAGE_LINENOISE is not set
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
@@ -822,8 +901,10 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_EMPTY is not set
 # BR2_PACKAGE_GOOGLEFONTDIRECTORY is not set
 # BR2_ISO_CODES is not set
+# BR2_PACKAGE_MCRYPT is not set
 # BR2_PACKAGE_MOBILE_BROADBAND_PROVIDER_INFO is not set
 # BR2_PACKAGE_SHARED_MIME_INFO is not set
+# BR2_PACKAGE_SNOWBALL_INIT is not set
 # BR2_PACKAGE_SOUND_THEME_BOREALIS is not set
 # BR2_PACKAGE_SOUND_THEME_FREEDESKTOP is not set
 
@@ -859,10 +940,13 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_GUPNP is not set
 # BR2_PACKAGE_GSSDP is not set
+# BR2_PACKAGE_GESFTPSERVER is not set
 # BR2_PACKAGE_HEIRLOOM_MAILX is not set
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
+# BR2_PACKAGE_HTTPING is not set
 # BR2_PACKAGE_IFPLUGD is not set
+# BR2_PACKAGE_IFTOP is not set
 # BR2_PACKAGE_IGH_ETHERCAT is not set
 # BR2_PACKAGE_INADYN is not set
 
@@ -882,7 +966,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LINKS is not set
 
 #
-# linphone requires a toolchain with C++ support enabled
+# linphone requires a toolchain with threads and C++ support enabled
 #
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
@@ -924,6 +1008,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_PPPD is not set
 # BR2_PACKAGE_PPTP_LINUX is not set
 # BR2_PACKAGE_PROFTPD is not set
+# BR2_PACKAGE_PROXYCHAINS_NG is not set
 # BR2_PACKAGE_QUAGGA is not set
 # BR2_PACKAGE_RADVD is not set
 # BR2_PACKAGE_RPCBIND is not set
@@ -931,7 +1016,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_RSYNC is not set
 
 #
-# rtorrent requires a toolchain with C++ and WCHAR support
+# rtorrent requires a toolchain with C++, threads and WCHAR support
 #
 # BR2_PACKAGE_SAMBA is not set
 
@@ -942,6 +1027,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SOCKETCAND is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
+# BR2_PACKAGE_SPICE_PROTOCOL is not set
 
 #
 # Squid requires a toolchain with C++ and IPv6 support enabled
@@ -954,9 +1040,11 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_TINYHTTPD is not set
 # BR2_PACKAGE_TN5250 is not set
 # BR2_PACKAGE_TRANSMISSION is not set
+# BR2_PACKAGE_TVHEADEND is not set
 # BR2_PACKAGE_UDPCAST is not set
 # BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
+# BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
@@ -1010,9 +1098,12 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_BWM_NG is not set
 # BR2_PACKAGE_CPULOAD is not set
 # BR2_PACKAGE_HTOP is not set
+# BR2_PACKAGE_KEYUTILS is not set
 # BR2_PACKAGE_KMOD is not set
 # BR2_PACKAGE_MODULE_INIT_TOOLS is not set
 # BR2_PACKAGE_MONIT is not set
+# BR2_PACKAGE_NCDU is not set
+# BR2_PACKAGE_POLKIT is not set
 # BR2_PACKAGE_PROCPS is not set
 # BR2_PACKAGE_PSMISC is not set
 # BR2_PACKAGE_QUOTA is not set
@@ -1099,20 +1190,20 @@ BR2_PACKAGE_RAUMFELD_EXTRACT=y
 #
 # Filesystem images
 #
-# BR2_TARGET_ROOTFS_CRAMFS is not set
 # BR2_TARGET_ROOTFS_CLOOP is not set
-# BR2_TARGET_ROOTFS_EXT2 is not set
-# BR2_TARGET_ROOTFS_JFFS2 is not set
-# BR2_TARGET_ROOTFS_UBIFS is not set
-# BR2_TARGET_ROOTFS_SQUASHFS is not set
-# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_NONE=y
 # BR2_TARGET_ROOTFS_CPIO_GZIP is not set
 # BR2_TARGET_ROOTFS_CPIO_BZIP2 is not set
 # BR2_TARGET_ROOTFS_CPIO_LZMA is not set
+# BR2_TARGET_ROOTFS_CRAMFS is not set
+# BR2_TARGET_ROOTFS_EXT2 is not set
 BR2_TARGET_ROOTFS_INITRAMFS=y
+# BR2_TARGET_ROOTFS_JFFS2 is not set
 # BR2_TARGET_ROOTFS_ROMFS is not set
+# BR2_TARGET_ROOTFS_SQUASHFS is not set
+# BR2_TARGET_ROOTFS_TAR is not set
+# BR2_TARGET_ROOTFS_UBIFS is not set
 
 #
 # Bootloaders
@@ -1125,7 +1216,7 @@ BR2_TARGET_ROOTFS_INITRAMFS=y
 # Kernel
 #
 BR2_LINUX_KERNEL=y
-# BR2_LINUX_KERNEL_3_6 is not set
+# BR2_LINUX_KERNEL_3_7 is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
@@ -1152,7 +1243,14 @@ BR2_LINUX_KERNEL_UIMAGE=y
 # BR2_LINUX_KERNEL_EXT_XENOMAI is not set
 # BR2_LINUX_KERNEL_EXT_OCF_LINUX is not set
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
-BR2_LEGACY_CHECK_2012_11=y
+
+#
+# Legacy config options
+#
+# BR2_PACKAGE_CUSTOMIZE is not set
+# BR2_PACKAGE_XSERVER_xorg is not set
+# BR2_PACKAGE_XSERVER_tinyx is not set
+# BR2_PACKAGE_PTHREAD_STUBS is not set
 # BR2_PACKAGE_GETTEXT_STATIC is not set
 # BR2_PACKAGE_LIBINTL is not set
 # BR2_PACKAGE_INPUT_TOOLS_EVTEST is not set
